--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,18 @@
 {
-    "rewrites": [
+    "framework": "vite",
+    "buildCommand": "npm run build",
+    "outputDirectory": "dist",
+    "routes": [
         {
-            "source": "/api/:path*",
-            "destination": "/api/:path*"
+            "handle": "filesystem"
         },
         {
-            "source": "/:path*",
-            "destination": "/index.html"
+            "src": "/api/(.*)",
+            "dest": "/api/$1"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/index.html"
         }
     ]
 }
